[package]
name = "rewrk3"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
futures-util = "0.3"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
